# AIOC

./: .gitmodules  LICENSE.md  README.md
.github/: FUNDING.yml
3d/: k1-aioc-solder-guide.stl
Scripts/: README.md  Setup.md  aioc-scBase.py  aioc-scRTSon.py  aioc-scVPTT.py  aioc-scbase.py
kicad/k1-aioc/: fabrication-toolkit-options.json  k1-aioc.kicad_pcb  k1-aioc.kicad_prl  k1-aioc.kicad_pro  k1-aioc.kicad_sch  sym-lib-table
kicad/k1-aioc/jlcpcb/: project.db
kicad/k1-aioc/jlcpcb/assembly/: BOM-k1-aioc.csv  POS-k1-aioc.csv
kicad/k1-aioc/jlcpcb/gerber/: k1-aioc-CuBottom.gbr  k1-aioc-CuTop.gbr  k1-aioc-EdgeCuts.gbr  k1-aioc-MaskBottom.gbr  k1-aioc-MaskTop.gbr  k1-aioc-NPTH.drl  k1-aioc-PTH.drl  k1-aioc-PasteBottom.gbr  k1-aioc-PasteTop.gbr  k1-aioc-SilkBottom.gbr  k1-aioc-SilkTop.gbr  k1-aioc-VScore.gbr
kicad/k1-aioc/jlcpcb/production_files/: BOM-k1-aioc.csv  CPL-k1-aioc.csv
kicad/k1-aioc/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
kicad/trusdx-aioc/: fp-lib-table  trusdx-aioc.kicad_pcb  trusdx-aioc.kicad_pro  trusdx-aioc.kicad_sch
kicad/trusdx-aioc/jlcpcb/: project.db
kicad/trusdx-aioc/jlcpcb/production_files/: BOM-trusdx-aioc.csv  CPL-trusdx-aioc.csv
stm32/aioc-fw/: .cproject  .project  CMakeLists.txt  cubeide-gcc.cmake  makefile.targets  stm32f30_flash.ld
stm32/aioc-fw/Drivers/CMSIS/Device/ST/STM32F3xx/: License.md  README.md  Release_Notes.html
stm32/aioc-fw/Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f301x8.h  stm32f302x8.h  stm32f302xc.h  stm32f302xe.h  stm32f303x8.h  stm32f303xc.h  stm32f303xe.h  stm32f318xx.h  stm32f328xx.h  stm32f334x8.h  stm32f358xx.h  stm32f373xc.h  stm32f378xx.h  stm32f398xx.h  stm32f3xx.h
stm32/aioc-fw/Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/arm/: startup_stm32f301x8.s  startup_stm32f302x8.s  startup_stm32f302xc.s  startup_stm32f302xe.s  startup_stm32f303x8.s  startup_stm32f303xc.s  startup_stm32f303xe.s  startup_stm32f318xx.s  startup_stm32f328xx.s  startup_stm32f334x8.s  startup_stm32f358xx.s  startup_stm32f373xc.s  startup_stm32f378xx.s  startup_stm32f398xx.s
stm32/aioc-fw/Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/gcc/: startup_stm32f301x8.s  startup_stm32f302x8.s  startup_stm32f302xe.s  startup_stm32f303x8.s  startup_stm32f303xc.s  startup_stm32f303xe.s  startup_stm32f318xx.s  startup_stm32f328xx.s  startup_stm32f334x8.s  startup_stm32f358xx.s  startup_stm32f373xc.s  startup_stm32f378xx.s  startup_stm32f398xx.s
stm32/aioc-fw/Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/iar/: startup_stm32f301x8.s  startup_stm32f302x8.s  startup_stm32f302xc.s  startup_stm32f302xe.s  startup_stm32f303x8.s  startup_stm32f303xc.s  startup_stm32f303xe.s  startup_stm32f318xx.s  startup_stm32f328xx.s  startup_stm32f334x8.s  startup_stm32f358xx.s  startup_stm32f373xc.s  startup_stm32f378xx.s  startup_stm32f398xx.s
stm32/aioc-fw/Drivers/STM32F3xx_HAL_Driver/: License.md  README.md  Release_Notes.html
stm32/aioc-fw/Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_can.h  stm32f3xx_hal_cec.h  stm32f3xx_hal_crc.h  stm32f3xx_hal_gpio.h  stm32f3xx_hal_hrtim.h  stm32f3xx_hal_i2c.h  stm32f3xx_hal_i2c_ex.h  stm32f3xx_hal_iwdg.h  stm32f3xx_hal_nand.h  stm32f3xx_hal_nor.h  stm32f3xx_hal_pcd.h  stm32f3xx_hal_smartcard.h  stm32f3xx_hal_smbus.h  stm32f3xx_hal_sram.h  stm32f3xx_hal_tim.h  stm32f3xx_hal_tsc.h  stm32f3xx_hal_uart.h  stm32f3xx_hal_uart_ex.h  stm32f3xx_hal_usart.h  stm32f3xx_ll_adc.h  stm32f3xx_ll_cortex.h  stm32f3xx_ll_dac.h  stm32f3xx_ll_fmc.h  stm32f3xx_ll_hrtim.h  stm32f3xx_ll_i2c.h  stm32f3xx_ll_iwdg.h  stm32f3xx_ll_spi.h  stm32f3xx_ll_tim.h  stm32f3xx_ll_usart.h  stm32f3xx_ll_usb.h
stm32/aioc-fw/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
stm32/aioc-fw/Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal.c  stm32f3xx_hal_adc.c  stm32f3xx_hal_adc_ex.c  stm32f3xx_hal_can.c  stm32f3xx_hal_cec.c  stm32f3xx_hal_comp.c  stm32f3xx_hal_crc.c  stm32f3xx_hal_crc_ex.c  stm32f3xx_hal_dac.c  stm32f3xx_hal_exti.c  stm32f3xx_hal_flash_ex.c  stm32f3xx_hal_gpio.c  stm32f3xx_hal_hrtim.c  stm32f3xx_hal_i2c.c  stm32f3xx_hal_i2c_ex.c  stm32f3xx_hal_i2s.c  stm32f3xx_hal_i2s_ex.c  stm32f3xx_hal_irda.c  stm32f3xx_hal_iwdg.c  stm32f3xx_hal_nand.c  stm32f3xx_hal_nor.c  stm32f3xx_hal_opamp.c  stm32f3xx_hal_pccard.c  stm32f3xx_hal_pcd.c  stm32f3xx_hal_rcc.c  stm32f3xx_hal_rtc.c  stm32f3xx_hal_sdadc.c  stm32f3xx_hal_smartcard.c  stm32f3xx_hal_smbus.c  stm32f3xx_hal_spi.c  stm32f3xx_hal_sram.c  stm32f3xx_hal_tim.c  stm32f3xx_hal_tim_ex.c  stm32f3xx_hal_timebase_rtc_alarm_template.c  stm32f3xx_hal_timebase_rtc_wakeup_template.c  stm32f3xx_hal_timebase_tim_template.c  stm32f3xx_hal_tsc.c  stm32f3xx_hal_uart.c  stm32f3xx_hal_uart_ex.c  stm32f3xx_hal_usart.c  (+9 more)
stm32/aioc-fw/Inc/: aioc.h  stm32f3xx_hal_conf.h  tusb_config.h
stm32/aioc-fw/Src/: audio_dsp.c  audio_dsp.h  cos.h  fox_hunt.c  fox_hunt.h  io.c  io.h  led.c  led.h  main.c  morse.c  morse.h  ptt.h  settings.c  settings.h  startup_stm32f302xc.s  usb.c  usb.h  usb_audio.c  usb_audio.h  usb_descriptors.c  usb_descriptors.h  usb_dfu.c  usb_dfu.h  usb_hid.c  usb_hid.h  usb_serial.c  usb_serial.h
